--- a/src/styling/scss/app.scss
+++ b/src/styling/scss/app.scss
@@ -2,6 +2,7 @@
 @import "normalize";
 @import "reset";
 @import "typography";
+@import "icomoon-icons";
 
 // Layout
 // https://github.com/1000ch/grd/blob/master/src/grd.css
