Added semantic-ui, wip: ag-grid

--- a/src/styling/scss/app.scss
+++ b/src/styling/scss/app.scss
@@ -1,7 +1,8 @@
+// @import "normalize";
+// @import "reset";
+// @import "typography";
 @import "variables";
-@import "normalize";
-@import "reset";
-@import "typography";
+@import "../../../node_modules/semantic-ui-css/semantic.scss";
 @import "icomoon-icons";
 
 // Layout
@@ -11,8 +12,8 @@
 // @import "flexboxgrid";
 
 // https://bulma.io/documentation/
-$gap: 16px !default;
-@import "../../node_modules/bulma/bulma.sass";
+// $gap: 16px !default;
+// @import "../../../node_modules/bulma/bulma.sass";
 
 // @import "../../node_modules/bulma/sass/utilities/_all.sass";
 // @import "../../node_modules/bulma/sass/grid/columns.sass";
@@ -21,10 +22,13 @@ $gap: 16px !default;
 // @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 // @import "../../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
 // https://fontawesome.com/v4.7.0/examples/
-@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+// @import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 
 // Misc
 // @import "devcards";
+
+@import "../../../node_modules/ag-grid-community/dist/styles/ag-grid.scss";
+@import "../../../node_modules/ag-grid-community/dist/styles/ag-theme-balham/sass/_ag-theme-balham-mixin.scss";
 
 // Custom scss
 @import "garden";
