--- a/src/styling/scss/app.scss
+++ b/src/styling/scss/app.scss
@@ -11,7 +11,7 @@
 
 // https://bulma.io/documentation/
 $gap: 16px !default;
-@import "../../node_modules/bulma/bulma.sass";
+// @import "../../node_modules/bulma/bulma.sass";
 
 // @import "../../node_modules/bulma/sass/utilities/_all.sass";
 // @import "../../node_modules/bulma/sass/grid/columns.sass";
@@ -20,11 +20,14 @@ $gap: 16px !default;
 // @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 // @import "../../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
 // https://fontawesome.com/v4.7.0/examples/
-@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "../../../node_modules/semantic-ui-css/semantic";
+@import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 
 // Misc
 // @import "devcards";
 
 // Custom scss
 @import "garden";
+
+
 @import "main";
