--- a/src/styling/scss/_main.scss
+++ b/src/styling/scss/_main.scss
@@ -1,4 +1,10 @@
 html {
     background-color: white;
+
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 }
 
